# sentiment-analysis

./: .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml
configs/: mlflow.yaml  model.yaml  preprocess.yaml  train.yaml
sentiment_analysis/: base_model.py  data.py  export.py  help.py  infer.py  model.py  predict.py  preprocess.py  train.py
